templates/smartcheck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    service: proxy
  name: smartcheck
  namespace: smartcheck
spec:
  tls:
  - hosts:
    - ${SC_HOSTNAME}
    # secretName: k8s-certificate
  rules:
    - host: ${SC_HOSTNAME}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy
              port:
                number: 443
    - host: ${SC_REG_HOSTNAME}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy
              port:
                number: 5000
